--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,5 +1,458 @@
+*{
+    text-decoration: none;
+}
 .noto-serif {
   font-family: "Noto Serif", serif;
   font-optical-sizing: auto;
   font-style: normal;
+}
+
+.inter {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  
+}
+
+/* shared styles */
+.display-flex{
+    display: flex;
+}
+/* dark 01 */
+.light-dark-gray{
+    color: #8987A1;
+    font-size: 16px;
+}
+/* dark 02 */
+.dark-gray{
+    color: #252432;
+}
+
+
+/* navbar related styles */
+.Navbar{
+    justify-content: space-between;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 48px;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.Navlinks {
+  display: flex;
+  align-items: center;
+  margin-top: 7px;
+  margin-bottom: 7px;
+  padding-left: 48px;
+  gap: 10px;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #000000;
+}
+.header-bar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 30px;
+}
+
+/* banner related styles */
+.Banner{
+    display: flex;
+    align-items: center;
+    margin-top: 110px;
+}
+.banner-title{
+    max-width: 570px;
+    min-width: 299px;
+    margin-top: 56px;
+}
+.banner-title h1{
+    font-size: 65px;
+    font-weight: bold;
+    margin-top: 56px;
+}
+.title-des{
+    font-size: 22px;
+    max-width: 570px;
+    min-height: 108px;
+    text-align: left;
+    margin-top: 13px;
+}
+.Banner-image{
+    margin-top: 90px;
+}
+.Navbar, .Banner{
+    max-width: 1140px;
+    margin: 0 auto;
+} 
+.text-orange{
+    color: #E95A08;
+}
+
+/* cart styles starts */
+.plants-content{
+    align-items: center;
+    margin-top: 180px;
+}
+.plants-content h1{
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 16px;
+}
+.highlight {
+  color: #E95A08;
+  font-weight: bold;
+}
+.description {
+  font-size: 22px;
+  max-width: 750px;
+  margin: 0 auto 50px;
+  color: #8987A1;
+  text-align: center;
+}
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  max-width: 1140px;
+  margin: 0 auto;
+}
+.card img {
+  width: 100%;
+  margin-bottom: 30px;
+  max-width: 270px;
+  max-height: 322px;
+}
+.card h3 {
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.card .price {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+.card button {
+  background-color: #E95A08;
+  color: white;
+  border: none;
+  padding: 10px 0;
+  width: 100%;
+  cursor: pointer;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.card button:hover {
+  background-color: darkorange;
+}
+/* cart styles end  */
+
+
+                          
+/* plants lover section starts */
+
+.plants-lover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1140px;
+  margin: 210px auto 130px auto; 
+  gap: 60px;
+  position: relative;
+}
+.plants-badge img{
+  position: absolute;
+  top: -100px;             
+  left: 35%;              
+  width: 288px;
+}
+.plants-title{
+    font-size:3.12rem;
+    font-weight: bold;
+    color: #000000;
+    margin-top: 38px;
+}
+.plants-point li {
+  font-size: 22px;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.5);
+  padding-bottom: 20px;
+  
+}
+
+
+
+.simple-text-section h1{
+  font-size: 3.12rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 16px;
+  margin-top: 133px;
+}
+.highlight {
+  color: #E95A08;
+  font-weight: bold;
+}
+.simple-text-section p{
+  font-size: 1.5rem;
+  max-width: 750px;
+  margin: 0 auto 50px;
+  color: #8987A1;
+  text-align: center;
+  margin-bottom: 120px;
+}
+
+
+
+
+/* Container for center alignment */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+/* Subscribe section style starts */
+.subscribe {
+  background-image: url('/B12A02-Responsive-Flowers/assets/news-letter-bg.png');
+  background-size: cover;
+  background-position: center;
+  padding: 50px 0;
+  color: white;
+  text-align: center;
+}
+.subscribe-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.subscribe-inner h2 {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.subscribe-form {
+  display: flex;
+  
+}
+
+.subscribe-form input[type="email"] {
+  padding: 10px 15px;
+  border: none;
+  width: 250px;
+}
+
+.subscribe-form button {
+  padding: 10px 20px;
+  background-color:#E95A08;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+/* === Footer Section === */
+.footer {
+  background-color: #ffffff;
+  padding: 50px 160px;
+}
+
+.footer-inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 30px;
+  max-width: 1120px;
+  max-height: 248px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.footer-column {
+  flex: 1 1 220px;
+}
+
+.footer-logo {
+  width: 150px;
+  margin-bottom: 20px;
+}
+
+.footer-description, .inter {
+  font-size: 22px;
+  font-weight: 400px;
+  color: rgba(0, 0, 0, 0.5)
+}
+.footer-column ul, .inter {
+  list-style: none;
+  /* padding: 80px; */
+}
+
+.footer-column ul li, .inter {
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.5);
+  padding: 8px;
+}
+
+.footer-column ul li a, .inter {
+  color:rgba(107, 114, 128, 1);
+  gap: 50px;
+}
+
+/* === Social Icons  */
+.social-icons .icons {
+  display: flex;
+  gap: 20px;
+}
+
+.social-icons .icons a img {
+  width: 30px;
+  height: 30                                                                                                          px;
+  
+}
+
+/* Bottom Text*/
+.footer-bottom-text {
+  text-align: center;
+  margin-top: 40px;
+  color: #aaa;
+  font-size: 14px;
+}
+
+
+
+@media (max-width: 768px) {
+  .Navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+ .Navbar display-flex{
+    display: flex;
+ }
+ .nav-item{
+    display: none;
+ }
+
+ .Navbar display-flex{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+ }
+  .Navlinks {
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+  }
+  .nav-item{
+    display: none;
+  }
+
+  .Banner {
+    flex-direction: column;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .banner-title {
+    margin-top: 0;
+    padding: 0 15px;
+  }
+
+  .banner-title h1 {
+    font-size: 32px;
+    margin-top: 20px;
+  }
+
+  .title-des {
+    font-size: 16px;
+    min-height: auto;
+    margin-top: 10px;
+  }
+
+  .Banner-image img {
+    max-width: 90%;
+    height: auto;
+    margin-top: 30px;
+  }
+
+  .plants-content h1 {
+    font-size: 30px;
+  }
+
+  .description {
+    font-size: 16px;
+    padding: 0 15px;
+  }
+
+  .card-container {
+    grid-template-columns: 1fr;
+    padding: 0 15px;
+  }
+
+  .plants-lover {
+    flex-direction: column;
+    width: 100%;
+    gap: 30px;
+    padding: 0 15px;
+  }
+
+  .plants-badge img {
+    position: static;
+    width: 200px;
+    margin-bottom: 20px;
+  }
+
+  .plants-title {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .plants-point li {
+    font-size: 16px;
+    text-align: left;
+  }
+
+  .simple-text-section h1 {
+    font-size: 28px;
+  }
+
+  .simple-text-section p {
+    font-size: 16px;
+    padding: 0 15px;
+  }
+
+  .subscribe-inner h2 {
+    font-size: 24px;
+    padding: 0 10px;
+  }
+
+  .subscribe-form {
+    flex-direction: column;
+    width: 100%;
+    padding: 0 15px;
+  }
+
+  .subscribe-form input[type="email"],
+  .subscribe-form button {
+    width: 100%;
+  }
+
+  .footer-inner {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .footer-column {
+    width: 100%;
+  }
+
+  .footer-logo {
+    margin: 0 auto 20px;
+  }
 }
