--- a/Styles/style.css
+++ b/Styles/style.css
@@ -37,7 +37,7 @@
     font-weight: bold;
     font-size: 16px;
 }
-.Navlinks {
+.Nav-links {
   display: flex;
   align-items: center;
   margin-top: 7px;
@@ -337,7 +337,7 @@
     flex-direction: column;
     gap: 10px;
  }
-  .Navlinks {
+  .Nav-links {
     flex-direction: column;
     gap: 10px;
     margin-top: 20px;
